Fri Jun 24 13:15:03 2005  Gary Maxey <gary.maxey@hp.com>

        * TAO_IDL/be/be_codegen.cpp
          Generated additional include files in stub header for Value Box

        * TAO/tao/Valuetype/StringValue.pidl
        * TAO/tao/Valuetype/StringValueC.cpp
        * TAO/tao/Valuetype/StringValueC.h
        * TAO/tao/Valuetype/StringValueC.inl
          Standard OMG Value Box Definitions

Fri Jun 24 19:42:03 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_interface/interface_cs.cpp:
        
          For local interfaces, changed generated code for _narrow()
          and _unchecked_narrow() methods. For local interfaces, all
          that needs to be done is return a duplicate of a
          dynamic_cast<>, for both methods. Thanks to Johnny Willemsen
          <jwillemsen@remedy.nl> for pointing out the opportunity to
          shrink generated code, and to Ossama Othman
          <ossama@dre.vanderbilt.edu> for an informative discussion on
          the possible benefits of inlining these methods.

Fri Jun 24 13:51:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ClientRequestInfo.{cpp,inl}:
          Moved a few methods out of the inline file to the cpp file

Fri Jun 24 12:30:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/TAO_Server_Request.h:
          Corrected ifdef guards in this file to match the real filename

        * tao/Dynamic_Adapter.h:
          Removed forward declaration of TAO_GIOP_Twoway_Invocation

        * tao/DynamicInterface/DII_Invocation.{h,cpp,inl}:
          The inl file has some constructors that are ifdef'd with #if 0.
          These used a base class that is not there, so zapped them and
          because the inl file is now empty, removed that from the archive

Fri Jun 24 06:56:11 2005  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:

          Avoid ambiguity error from Visual C++ 6.0.
