@@ -2,6 +2,11 @@
 ##
 ## $Id$
 ##
+## This file was generated by MPC.  Any changes made directly to
+## this file will be lost the next time it is generated.
+##
+## MPC Command:
+## ../bin/mwc.pl -include /home/jtc/ACE/ACE-config3/MPC/config -include /home/jtc/ACE/ACE-config3/MPC/templates -type automake TAO.mwc
 
 ACE_BUILDDIR = $(top_builddir)/..
 ACE_ROOT = $(top_srcdir)/..
@@ -56,6 +61,7 @@ libTAO_IDL_FE_la_SOURCES = \
   ast/ast_union_branch.cpp \
   ast/ast_union_fwd.cpp \
   ast/ast_union_label.cpp \
+  ast/ast_valuebox.cpp \
   ast/ast_valuetype.cpp \
   ast/ast_valuetype_fwd.cpp \
   ast/ast_visitor.cpp \
@@ -126,6 +132,7 @@ noinst_HEADERS = \
   include/ast_union_branch.h \
   include/ast_union_fwd.h \
   include/ast_union_label.h \
+  include/ast_valuebox.h \
   include/ast_valuetype.h \
   include/ast_valuetype_fwd.h \
   include/ast_visitor.h \
@@ -215,6 +222,7 @@ libTAO_IDL_BE_la_SOURCES = \
   be/be_union_branch.cpp \
   be/be_union_fwd.cpp \
   be/be_union_label.cpp \
+  be/be_valuebox.cpp \
   be/be_valuetype.cpp \
   be/be_valuetype_fwd.cpp \
   be/be_visitor.cpp \
@@ -251,6 +259,7 @@ libTAO_IDL_BE_la_SOURCES = \
   be/be_visitor_union.cpp \
   be/be_visitor_union_branch.cpp \
   be/be_visitor_union_fwd.cpp \
+  be/be_visitor_valuebox.cpp \
   be/be_visitor_valuetype.cpp \
   be/be_visitor_valuetype_fwd.cpp
 
@@ -299,6 +308,7 @@ noinst_HEADERS += \
   be_include/be_union_branch.h \
   be_include/be_union_fwd.h \
   be_include/be_union_label.h \
+  be_include/be_valuebox.h \
   be_include/be_valuetype.h \
   be_include/be_valuetype_fwd.h \
   be_include/be_visitor.h \
@@ -335,6 +345,7 @@ noinst_HEADERS += \
   be_include/be_visitor_union.h \
   be_include/be_visitor_union_branch.h \
   be_include/be_visitor_union_fwd.h \
+  be_include/be_visitor_valuebox.h \
   be_include/be_visitor_valuetype.h \
   be_include/be_visitor_valuetype_fwd.h
 
